[#84] Fix Delivery module button spacing
* Change: match spacing to mocks

--- a/components/SectionComponents/SectionGetDeliveryAddress/Delivery.scss
+++ b/components/SectionComponents/SectionGetDeliveryAddress/Delivery.scss
@@ -74,15 +74,16 @@
   }
 
   &__actionDivider {
-    padding:0 4rem;
+    padding: 0;
     margin-left: 1rem;
     margin-right: 1rem;
     text-align: center;
     font-weight: 900;
     text-transform: uppercase;
 
-    @include media-breakpoint-up(md) {
-      padding:0 4rem;
+    @include media-breakpoint-up(lg) {
+      margin-left: 5.9rem;
+      margin-right: 5.9rem;
     }
   }
 
